# fastapi-ci-test

./: Jenkinsfile  config.ini  main.py  pyproject.toml
scripts/: build_env.bash  deploy.bash  deploy.sh  prod_start.bash
