[tool.poetry]
name = "api-ff"
version = "0.1.0"
description = ""
authors = ["SundownPark"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
fastapi = "^0.103.1"
python-multipart = "^0.0.7"
gunicorn = "^21.2.0"
uvicorn = "0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
